--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>𝕏 Reply List</h1>
-            <p>Daftar Private Anda</p>
+            <h1>list gb celipto friend</h1>
             <div class="total-count">
                 Total: <strong id="totalCount">0</strong>
             </div>
@@ -255,7 +254,7 @@
         // Data pengguna
         const users = [
             { handle: 'standotsui' },
-            { handle: '0xdefimaster' },
+            { handle: 'gndrngaz17' },
             { handle: 'cryptoholic2200' },
             { handle: 'Gyokeres_eth' },
             { handle: 'snorpyXBT' },
@@ -265,14 +264,11 @@
             { handle: 'azwardiiqbal' },
             { handle: '0xIsa0' },
             { handle: 'Kaawairashii' },
-            { handle: 'ChenGuanXi7766' },
             { handle: 'Bigchase_ADN' },
             { handle: 'CreateWithTony' },
             { handle: 'Noora_Web3' },
             { handle: 'devnull_jack' },
             { handle: 'Jepe999' },
-            { handle: 'AEP0612' },
-            { handle: 'Mint8777' },
             { handle: 'Utpalrabhaaa' },
             { handle: 'alfathjiee' },
             { handle: 'worldkai123' },
@@ -284,25 +280,11 @@
             { handle: 'yantowid1' },
             { handle: 'rcyxie11' },
             { handle: '0xbaropintar' },
-            { handle: 'Jude_Malak' },
             { handle: 'lisbongg' },
             { handle: 'Meeehunter' },
             { handle: 'ammuchammu02' },
             { handle: 'Glitchnfa' },
-            { handle: '1000xSolid' },
-            { handle: '0xWuki' },
-            { handle: 'SimonDezX' },
-            { handle: 'Cryptosaga001' },
-            { handle: 'Oxdave' },
-            { handle: '0xHamadav' },
-            { handle: 'gojocallsOG' },
-            { handle: 'realSam0x' },
-            { handle: 'thescreenwire' },
-            { handle: 'Web3__Youth' },
-            { handle: 'defi_emmy' },
-            { handle: 'JJXMeta' },
-            { handle: 'ApeKideth' },
-            { handle: '_0xrekt' },
+            { handle: '0xrekt' },
             { handle: 'OrcaWynn' },
             { handle: 'dreyart01' },
             { handle: '0xteyra' },
@@ -312,19 +294,13 @@
             { handle: 'W15Sy' },
             { handle: '0xraguna' },
             { handle: 'anti_drain' },
-            { handle: 'azzurahai' },
             { handle: 'd33genist' },
             { handle: 'uksuyy' },
             { handle: '0xsaragi' },
             { handle: 'HoSieMun' },
             { handle: 'raqxuel25' },
-            { handle: 'muhmmdjohan' },
             { handle: 'xxxxxxxxxxx456' },
             { handle: 'naumanisrar02' },
-            { handle: 'PlayerU60478299' },
-            { handle: 'k1zora' },
-            { handle: 'Bishopu15' },
-            { handle: 'Fasyayaya14' },
             { handle: 'Delf002' },
             { handle: 'iamtofunmi01' },
             { handle: 'marcuslayerx' },
@@ -360,64 +336,22 @@
             { handle: 'mochiddj' },
             { handle: '0xLittlejoey' },
             { handle: 'ainikolaNFT' },
-            { handle: 'qrx9t' },
-            { handle: 'ghezel8888' },
             { handle: 'BakoBalie' },
             { handle: 'Mandero128992' },
-            { handle: 'SuafSuaf498807' },
-            { handle: 'rizkisanker' },
-            { handle: 'Mr_Kalamkaar' },
-            { handle: '0x_vant' },
             { handle: 'brood_meme' },
-            { handle: 'CesarNovia64388' },
             { handle: 'tienlui8386' },
-            { handle: '0xRaiNgz' },
-            { handle: 'kodd25' },
-            { handle: 'Abu__foysal' },
-            { handle: 'EnzoEris' },
             { handle: 'asha_eth' },
             { handle: 'alter0099' },
-            { handle: 'DarkoMatrix' },
-            { handle: 'Rehz_cr7' },
             { handle: 'patryx' },
             { handle: 'DebshSukil' },
             { handle: 'Keymonuta' },
             { handle: 'tedsrekt' },
             { handle: 'JossyBlaak' },
             { handle: 'dri_poo' },
-            { handle: 'ShillerN00b' },
-            { handle: 'baobabmango' },
             { handle: 'Zeksintra' },
-            { handle: 'i7SEVENNN' },
-            { handle: 'Limitado666' },
-            { handle: 'tsukiyakko' },
-            { handle: 'Kudabajingan' },
             { handle: '0xdoha' },
-            { handle: 'Cqy4ZDH3k8aF3Lv' },
-            { handle: 'GNftarmy' },
-            { handle: 'LitetheX' },
-            { handle: 'dmitrysssss' },
-            { handle: 'shanans_' },
-            { handle: '2rapspoint_' },
-            { handle: 'Ahmedhaq01' },
-            { handle: 'Tuyendevt' },
-            { handle: 'xyzn077' },
             { handle: 'TinggiFitamin' },
-            { handle: 'Hasdaaja_' },
-            { handle: 'avarinjung' },
-            { handle: 'gembuloney' },
-            { handle: 'MosolovAle98427' },
-            { handle: 'Nesca677' },
-            { handle: 'CoortezzEth' },
-            { handle: 'FaruuQ_1' },
-            { handle: 'bmaplmj' },
-            { handle: 'Kai_Nimo02' },
-            { handle: 'MarcoSimonetti8' },
-            { handle: 'onchainNika' },
-            { handle: 'coinhunter_X' },
-            { handle: 'OPULENTBRR' },
-            { handle: 'truonggiangle99' },
-            { handle: 'softlink_web3' }
+            { handle: 'onchainNika' }
         ];
 
         let filteredUsers = [...users];
