Update user handles in index.html

--- a/index.html
+++ b/index.html
@@ -355,55 +355,38 @@
             { handle: 'gndrngaz17' },
             { handle: 'cryptoholic2200' },
             { handle: 'Gyokeres_eth' },
-            { handle: 'snorpyXBT' },
             { handle: 'ramadityapu' },
             { handle: 'Majidoank31' },
             { handle: 'suhuweb3' },
             { handle: 'azwardiiqbal' },
-            { handle: '0xIsa0' },
-            { handle: 'Kaawairashii' },
             { handle: 'Bigchase_ADN' },
             { handle: 'CreateWithTony' },
-            { handle: 'Noora_Web3' },
             { handle: 'devnull_jack' },
-            { handle: 'Jepe999' },
-            { handle: 'Utpalrabhaaa' },
             { handle: 'alfathjiee' },
             { handle: 'worldkai123' },
             { handle: '_beyondmydreams' },
             { handle: 'AgilTriatm64429' },
             { handle: 'Nuilever01' },
-            { handle: 'no_8_eight' },
             { handle: 'psypth' },
             { handle: 'yantowid1' },
             { handle: 'rcyxie11' },
             { handle: '0xbaropintar' },
-            { handle: 'lisbongg' },
             { handle: 'Meeehunter' },
             { handle: 'ammuchammu02' },
-            { handle: 'Glitchnfa' },
-            { handle: '0xrekt' },
             { handle: 'OrcaWynn' },
             { handle: 'dreyart01' },
             { handle: '0xteyra' },
             { handle: 'NiklasCryptoX' },
-            { handle: 'xCryptoAlucard' },
-            { handle: 'gordey_4ik' },
             { handle: 'W15Sy' },
             { handle: '0xraguna' },
             { handle: 'anti_drain' },
-            { handle: 'd33genist' },
             { handle: 'uksuyy' },
-            { handle: '0xsaragi' },
             { handle: 'HoSieMun' },
             { handle: 'raqxuel25' },
-            { handle: 'xxxxxxxxxxx456' },
             { handle: 'naumanisrar02' },
             { handle: 'Delf002' },
             { handle: 'iamtofunmi01' },
-            { handle: 'marcuslayerx' },
             { handle: 'qord_zn' },
-            { handle: 'world_invade' },
             { handle: 'Autosultan_team' },
             { handle: 'Jeneveive_23' },
             { handle: 'Oxchop_pa' },
@@ -411,12 +394,10 @@
             { handle: '0x3vm' },
             { handle: 'kormoeth' },
             { handle: 'AndoriginalDao' },
-            { handle: 'MdSeyam2883738' },
             { handle: '0xNodachi' },
             { handle: 'RABI10090' },
             { handle: 'hisokai2002' },
             { handle: '0xAadill' },
-            { handle: '0xGloryFi' },
             { handle: 'Kirahell69' },
             { handle: 'u40_bnb' },
             { handle: 'Danko_ho' },
@@ -425,9 +406,7 @@
             { handle: '0xRavaillac' },
             { handle: 'BigPaulTm' },
             { handle: '0xchannn' },
-            { handle: 'Hickslve12zj' },
             { handle: 'Davidgmi' },
-            { handle: 'akiii345' },
             { handle: 'ajrmdhn___' },
             { handle: 'fitri_besare' },
             { handle: 'sweet_tobelly' },
@@ -436,7 +415,6 @@
             { handle: 'ainikolaNFT' },
             { handle: 'BakoBalie' },
             { handle: 'Mandero128992' },
-            { handle: 'brood_meme' },
             { handle: 'tienlui8386' },
             { handle: 'asha_eth' },
             { handle: 'alter0099' },
@@ -445,11 +423,46 @@
             { handle: 'Keymonuta' },
             { handle: 'tedsrekt' },
             { handle: 'JossyBlaak' },
-            { handle: 'dri_poo' },
             { handle: 'Zeksintra' },
             { handle: '0xdoha' },
             { handle: 'TinggiFitamin' },
-            { handle: 'onchainNika' }
+            { handle: 'onchainNika' },
+            { handle: 'Deday_1' },
+            { handle: 'AlmeeraaAz' },
+            { handle: '0xcclover' },
+            { handle: 'bagminseung17' },
+            { handle: 'yyndsssss' },
+            { handle: 'ikiscream' },
+            { handle: 'vikktorrrre' },
+            { handle: 'SoftLink__' },
+            { handle: 'cryptonighteee' },
+            { handle: 'GoeTheonly' },
+            { handle: 'VittoriaGrazie' },
+            { handle: 'Lifesucksffs' },
+            { handle: 'tiCkr0x' },
+            { handle: 'justme_justme10' },
+            { handle: 'Maxxi_OJ' },
+            { handle: 'ari40fourty' },
+            { handle: 'hoyahoya82' },
+            { handle: 'dakydaky3600' },
+            { handle: 'ttogmo2' },
+            { handle: 'azzurahai' },
+            { handle: '0xuzy_sol' },
+            { handle: 'gatzyxx' },
+            { handle: 'Ellie_963' },
+            { handle: 'carlxbt' },
+            { handle: 'AirdropRampage' },
+            { handle: 'Thaohiwon' },
+            { handle: 'web3swarit' },
+            { handle: 'emreofficialy' },
+            { handle: 'Whizzy_of_web3' },
+            { handle: 'iconThaGreat' },
+            { handle: 'darkfiresss_' },
+            { handle: 'BoredRiko' },
+            { handle: 'Mekulavick' },
+            { handle: 'cryptoflairnews' },
+            { handle: '0xRexnftcrypto' },
+            { handle: 'REHANH0SSAIN' }
         ];
 
         // Data pengguna Tab 2
