Add multiple user handles to index.html

--- a/index.html
+++ b/index.html
@@ -480,7 +480,36 @@
             { handle: 'Mekulavick' },
             { handle: 'cryptoflairnews' },
             { handle: '0xRexnftcrypto' },
-            { handle: 'REHANH0SSAIN' }
+            { handle: 'REHANH0SSAIN' },
+            { handle: 'shufcop' },
+            { handle: 'Hyder_NFT' },
+            { handle: 'airplanestar_' },
+            { handle: 'Faithmeta_x' },
+            { handle: '0xCellep' },
+            { handle: 'GorillaObora' },
+            { handle: 'Blipege' },
+            { handle: 'CasperInChain' },
+            { handle: '0xCindyWeb3' },
+            { handle: 'Joepcxc' },
+            { handle: '0xZhao888' },
+            { handle: 'mpozzecco' },
+            { handle: 'eng_khairallah1' },
+            { handle: '0Dluv' },
+            { handle: '0xwaleedkl' },
+            { handle: 'mr_random14' },
+            { handle: 'DeFi_Blub' },
+            { handle: 'official_pap_' },
+            { handle: 'logic_web3' },
+            { handle: 'JaypaulGrinds' },
+            { handle: 'eksoo_kys' },
+            { handle: 'web3_Adri' },
+            { handle: 'TheBullWeb3' },
+            { handle: 'Nick_Researcher' },
+            { handle: 'ZeusRebirth' },
+            { handle: 'mayflowers2x8' },
+            { handle: 'Jhon37419413175' },
+            { handle: '6th__account' },
+            { handle: 'DeimosWeb3' }
         ];
 
         // Data pengguna Tab 2
